--- a/music_shop/shop_main/templates/cart.html
+++ b/music_shop/shop_main/templates/cart.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 <link rel="stylesheet" href="{% static 'product_detail.css' %}" />
 <div
-	class="product-page"
+	class="product-page cart-page"
 	style="
 		max-width: 1100px;
 		margin: 100px auto 40px;
@@ -21,6 +21,34 @@
 		</div>
 	</div>
 </div>
+
+<style>
+	@media (max-width: 768px) {
+		.cart-page {
+			margin-top: 80px !important;
+			padding: 0 16px !important;
+		}
+
+		.product-title {
+			font-size: 1.5rem !important;
+		}
+
+		.card {
+			padding: 16px !important;
+		}
+	}
+
+	@media (max-width: 480px) {
+		.cart-page {
+			margin-top: 70px !important;
+			padding: 0 12px !important;
+		}
+
+		.product-title {
+			font-size: 1.3rem !important;
+		}
+	}
+</style>
 
 <script src="{% static 'js/api.js' %}"></script>
 <script src="{% static 'js/cart.js' %}"></script>
