--- a/music_shop/shop_main/templates/header.html
+++ b/music_shop/shop_main/templates/header.html
@@ -14,6 +14,7 @@
 	<ul class="nav-list">
 		<li><a href="{% url 'main' %}">Главная</a></li>
 		<li><a href="{% url 'catalog' %}">Каталог</a></li>
+		<li><a href="{% url 'favorites' %}">Избранное</a></li>
 		<li><a href="{% url 'account' %}">Кабинет</a></li>
 		<li><a href="{% url 'cart' %}">Корзина</a></li>
 
